<resources>
    <string name="app_name">SuitMediaTest</string>
    <string name="welcome">Welcome</string>
    <string name="info_app">This is app for suitmedia mobile developer test</string>
    <string name="hint_name">Type name here...</string>
    <string name="hint_palindrome">Type text palindrome</string>
    <string name="next">Next</string>
    <string name="check">Check</string>
    <string name="copyright">Copyright © 2020 Suitmedia All Rights Reserved.</string>
    <string name="choose_guest">Choose Guest</string>
    <string name="choose_event">Choose Event</string>
    <string name="hallo">Hallo,</string>
    <string name="search">Search</string>
    <string name="maps">Maps</string>
</resources>